8216049: stringTable::intern creates redundant String when looking up existing one

Reviewed-by: redestad, gziemski, rehn, zgu, jiangli